<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/credentials"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <EditText
            android:hint="@string/username"
            android:id="@+id/ID"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true" />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText
                android:hint="@string/password"
                android:id="@+id/PW"
                android:inputType="textPassword"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:singleLine="true" />
            <Button
                android:text="@string/connect"
                android:onClick="Connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <Spinner
        android:id="@+id/roster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/list"
        android:textIsSelectable="true"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dip" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:text="@string/listen"
            android:onClick="Listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        <EditText
            android:hint="@string/message"
            android:id="@+id/msg"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true" />
        <Button
            android:text="@string/send"
            android:onClick="SendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>